# Djask

./: .editorconfig  .flake8  .gitignore  .gitmodules  .pdm.toml  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  gen_setup.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: lint.yml  mypy.yml  release.yml  test.yml
djask/: app.py
djask/admin/: __init__.py  decorators.py  ext.py  views.py
djask/auth/: models.py
docs/: Makefile  requirements.in  requirements.txt
docs/source/: api.rst  cli.rst  conf.py  diving_into_models.rst  djask.admin.rst  djask.auth.rst  djask.rst  index.rst  models_and_web_api.rst  quickstart.rst
examples/simpleapp/: app.py
hooks/: pre-commit
requirements/: coloring.txt  dev.in  dev.txt  docs.in  docs.txt  linting.txt  tests.txt
src/djask/: __init__.py  app.py  blueprints.py  cli.py  custom_commands.py  exceptions.py  extensions.py  globals.py  helpers.py  mixins.py  types.py
src/djask/admin/: __init__.py  cli.py  decorators.py  ext.py  forms.py  views.py
src/djask/admin/api/: decorators.py  schemas.py  views.py
src/djask/admin/ui/: decorators.py  forms.py  views.py
src/djask/auth/: __init__.py  abstract.py  anonymous.py  forms.py  models.py  permission.py
src/djask/db/: models.py
src/djask/static/css/: bootstrap-icons.css  style.css
src/djask/static/js/: model.js  script.js
src/djask/templates/: base.html  macros.html
src/djask/templates/admin/: dashboard.html  login.html  main.html  model.html  model_404.html  model_add.html  model_edit.html
src/djask/templates/djask-admin/: aside.html  dashboard.html  login.html  macros.html  model.html  model_404.html  model_add.html  model_edit.html
tests/: conftest.py  test_admin.py  test_admin_api.py  test_admin_api_docs.py  test_admin_models.py  test_admin_modes.py  test_anonymous.py  test_apis.py  test_cli.py  test_custom_auth_model.py  test_error_handler.py  test_extensions.py  test_permissions.py
