[project]
authors = [
  {name = "andyzhou", email = "andyforever0108@outlook.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP :: WSGI",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "apiflask~=1.0",
    "flask-sqlalchemy~=2.5",
    "flask-wtf~=0.15",
    "flask-login~=0.5",
    "bootstrap-flask~=2.0",
    "flask-compress~=1.10",
    "wtforms-sqlalchemy~=0.3",
    "flask~=2.0",
    "marshmallow-sqlalchemy>=0.27.0",
    "python-dotenv>=0.19.2",
    "cookiecutter>=1.7.3",
    "authlib>=1.0.1",
    "typing-extensions>=4.2.0; python_version < \"3.8\"",
]
description = "An enhanced django-like Flask"
keywords = ["flask", "apiflask"]
license = {text = "MIT"}
name = "Djask"
readme = "README.md"
requires-python = ">=3.7"
version = "0.5.0"

[project.urls]
Documentation = "https://djask.readthedocs.io"
Home = "https://github.com/z-t-y/djask"
Repo = "https://github.com/z-t-y/djask"

[project.optional-dependencies]
[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]

[project.scripts]
djask = "djask.cli:main"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest~=6.2",
    "pytest-cov~=3.0",
    "sphinx~=4.2",
    "sphinx-tabs~=3.2",
    "pytest-xdist>=2.5.0",
    "pallets-sphinx-themes>=2.0.2",
    "pre-commit>=2.19.0",
    "mypy>=0.950",
    "flake8>=4.0.1",
    "types-Flask-SQLAlchemy>=2.5.1",
]

[tool.pytest.ini_options]
addopts = "--cov=src/djask -s -n auto -p no:warnings"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/djask"]
omit = [
    "*.html",
    "*/__main__.py",
    "*/cli.py",
    "*/project_template/*"
]

[tool.black]
include = ".py"
extend-exclude = """
src/djask/project_template
setup.py
"""

[tool.mypy]
exclude = [
    "src/djask/project_template",
    "src/djask/admin/api/views.py"
]
ignore_missing_imports = true
