[project]
authors = [{ name = "andyzhou", email = "andyforever0108@outlook.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP :: WSGI",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
  "apiflask>=1.1.1",
  "flask-sqlalchemy~=2.5",
  "flask-wtf~=0.15",
  "flask-login~=0.5",
  "bootstrap-flask~=2.0",
  "flask-compress~=1.10",
  "wtforms-sqlalchemy~=0.3",
  "flask>=2.2.0",
  "marshmallow-sqlalchemy>=0.27.0",
  "python-dotenv>=0.19.2",
  "cookiecutter>=1.7.3",
  "authlib>=1.0.1",
  "colorama>=0.4.5",
]
description = "An enhanced django-like Flask"
keywords = ["flask", "apiflask"]
license = { text = "MIT" }
name = "Djask"
readme = "README.md"
requires-python = ">=3.8"
version = "0.6.2"

[project.urls]
Documentation = "https://djask.readthedocs.io"
Home = "https://github.com/z-t-y/djask"
Repo = "https://github.com/z-t-y/djask"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project.scripts]
djask = "djask.cli:main"

[tool.pytest.ini_options]
addopts = "--ignore=src/djask/project_template --cov=src/djask -n 4 -p no:warnings"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/djask"]
omit = ["*.html", "*/__main__.py", "*/cli.py", "*/project_template/*"]

[tool.black]
include = ".py"
extend-exclude = """
src/djask/project_template
setup.py
"""

[tool.mypy]
exclude = ["src/djask/project_template", "src/djask/admin/api/views.py"]
ignore_missing_imports = true

[tool.pdm]
[tool.pdm.dev-dependencies]
linting = ["flake8>=5.0.4", "black>=22.6.0", "mypy>=0.971"]
docs = [
  "alabaster>=0.7.12",
  "pallets-sphinx-themes>=2.0.2",
  "sphinx>=5.1.1",
  "sphinx-tabs>=3.4.1",
  "sphinxcontrib-applehelp>=1.0.2",
  "sphinx-autobuild>=2021.3.14",
  "sphinxcontrib-devhelp>=1.0.2",
  "sphinxcontrib-htmlhelp>=2.0.0",
  "sphinxcontrib-jsmath>=1.0.1",
  "sphinxcontrib-qthelp>=1.0.3",
  "sphinxcontrib-serializinghtml>=1.1.5",
  "pip-tools>=6.8.0",
  "tomli>=2.0.1",
]
dev = ["pre-commit>=2.20.0"]
testing = ["pytest>=7.1.2", "pytest-cov>=3.0.0", "pytest-xdist>=2.5.0"]

[tool.pdm.scripts]
# Generate requirements.txt for docs.
doc-deps = { shell = """\
pdm run \
pip-compile docs/requirements.in \
--no-emit-index-url \
> docs/requirements.txt \
""" }

[tool.pdm.scripts.simple-app]
# You should call `simple-app` command from project root.
shell = """
cd examples/simpleapp
pdm run flask run
"""

[tool.pdm.scripts.docs]
# You should call `docs` command from project root.
shell = """
cd docs
make html
pdm run python -m http.server -d=build/html
"""
