[metadata]
name = Djask
version = attr: djask.__version__
url = https://github.com/z-t-y/djask
license = MIT
author = Andy Zhou
author_email = andyforever0108@outlook.com
description = An enhanced django-like Flask
long_description = file: README.md
long_description_content_type = text/markdown
platforms = ANY
project_urls = 
    Source = https://github.com/z-t-y/djask
keywords = flask, apiflask
classifiers = 
        Development Status :: 3 - Alpha
        Environment :: Web Environment
        Framework :: Flask
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Operating System :: OS Independent
        Topic :: Internet :: WWW/HTTP
        Topic :: Internet :: WWW/HTTP :: Dynamic Content
        Topic :: Internet :: WWW/HTTP :: WSGI
        Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7

[options.packages.find]
where = src
